--- a/templates/public/public_index.haml
+++ b/templates/public/public_index.haml
@@ -19,15 +19,13 @@
     which supports the ongoing development and maintenance of this project.
 
   .mb-8
-    
   
   .text-xl.font-normal.mb-2.mt-6
     Licensing and Attribution
   .mt-2
-    RapidPro is released under the <a href="https://github.com/rapidpro/rapidpro/blob/main/LICENSE">AGPL license</a>.
-
-  .mt-2
-    By distributing this software, you are agreeing to terms of the license which requires that all modifications you make, also be granted the AGPL license and be released publicy.
+    By distributing this software, you are agreeing to terms of the license. Please be sure
+    to review and understand all of the terms therein. If you have any questions, please direct
+    them to <a href="mailto:legal@textit.com">legal@textit.com</a>.
 
   .mt-6
     %temba-alert
