Fix width on login for real

--- a/templates/orgs/login/login_base.haml
+++ b/templates/orgs/login/login_base.haml
@@ -1,7 +1,7 @@
 -extends "no_nav.haml"
 -load smartmin i18n
 
--block extra-style
+-block styles
   {{block.super}}
   :css
     input {
@@ -11,7 +11,6 @@
     .content-card {
       width: 28em;
     }
-
 
 -block content
   .page-title
