Fix flow refresh and global redirect hook

--- a/templates/flows/flow_editor.haml
+++ b/templates/flows/flow_editor.haml
@@ -190,14 +190,16 @@
       }
     };
 
-    // wait for our component to load, then show the editor
-    if (window.showFlowEditor) {
-      window.showFlowEditor(document.getElementById("rp-flow-editor"), config);
-    } else {
-      document.addEventListener("temba-floweditor-loaded", function(){
+    onSpload(function(){
+      // wait for our component to load, then show the editor
+      if (window.showFlowEditor) {
         window.showFlowEditor(document.getElementById("rp-flow-editor"), config);
-      });
-    }
+      } else {
+        document.addEventListener("temba-floweditor-loaded", function(){
+          window.showFlowEditor(document.getElementById("rp-flow-editor"), config);
+        });
+      }
+    });
   
   
 -block alert-messages
