--- a/templates/smartmin/base.html
+++ b/templates/smartmin/base.html
@@ -1,27 +1,20 @@
 {% extends base_template %}
-
 {% load smartmin %}
-
 {% block pre-content %}
-<div class="page-header"><h2>{{ title }}</h2></div>
-{% endblock %}
-
+  <div class="page-header">
+    <h2>{{ title }}</h2>
+  </div>
+{% endblock pre-content %}
 {% block extra-script %}
-{{ block.super}}
-{# embed refresh script if refresh is active #}
-{% if refresh %}
-<script>
-var refreshTimeout = 10000;
+  {{ block.super }}
+  {# embed refresh script if refresh is active #}
+  {% if refresh %}
+    <script>
+      var refreshTimeout = parseInt("{{ refresh }}");
 
-
-refreshTimeout = {{ refresh }};
-function scheduleRefresh() {
-  window.setTimeout(refresh, refreshTimeout);
-}
-
-</script>
-{% endif %}
-{% endblock %}
-
-
-
+      function scheduleRefresh() {
+        window.setTimeout(refresh, refreshTimeout);
+      }
+    </script>
+  {% endif %}
+{% endblock extra-script %}
