--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -30,25 +30,22 @@
     -if not debug and not testing
       %script{src:"{{ STATIC_URL }}lib/raven.min.js"}
 
-    :javascript
-      var static_url = "{{STATIC_URL}}";
-      var org_id = {% if active_org %}{{active_org.id}}{% else %}null{%endif%};
-      var tembaVersion= "{{temba_version}}";
-      var params = '{{url_params|safe}}';
+    -compress js
+      %script{src:"{{ STATIC_URL }}js/utils.js"}
 
-      {% if user_org %}{% if user_org.is_anon %}
-      var anon_org = true;
-      {% else %}
-      var anon_org = false;
-      {% endif %}{% endif %}
+    :javascript
+      var static_url = "{{ STATIC_URL }}";
+      var org_id = {% if active_org %}{{ active_org.id }}{% else %}null{% endif %};
+      var tembaVersion = "{{ temba_version }}";
+      var params = "{{ url_params|safe }}";
+      var anon_org = asBool("{{ user_org.is_anon }}");
+      var menuSelection = "{{ temba_menu_selection }}"
 
       function handleMenuReady() {
         var selection = window.location.pathname.split("/").filter(function(path){ return !!path});
         var menu = document.querySelector("temba-menu");
-        if (menu) {
-          {% if temba_menu_selection %}
-          menu.setFocusedItem("{{temba_menu_selection}}");          
-          {% endif %}
+        if (menu && menuSelection) {
+          menu.setFocusedItem(menuSelection);          
         }
       }
 
