--- a/templates/orgs/org_signup.haml
+++ b/templates/orgs/org_signup.haml
@@ -43,7 +43,7 @@
         -trans "Sign In"
 
 
--block extra-script
+-block scripts
   %script{src:"{{ STATIC_URL }}bower/jsTimezoneDetect/jstz.js"}
   {{ block.super }}
 
