Better handling of post_url for spa content menu

--- a/templates/contacts/contact_read.haml
+++ b/templates/contacts/contact_read.haml
@@ -67,8 +67,10 @@
     var idxTickets = 4;
 
     function contactUpdated(evt) {
-      var details = document.querySelector("temba-contact-details");
+      const details = document.querySelector("temba-contact-details");
       details.refresh();
+      const contentMenu = document.querySelector("temba-content-menu");
+      contentMenu.refresh();
     }
 
     function handlePendingRefreshed(evt) {
