--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -150,7 +150,7 @@
               .wrapper(style="display:flex;z-index:100000;margin-top:0.1em;margin-left:1em")
                 %temba-loading(size=16 units=6)
     
-            .spa-content.p-5.overflow-y-auto.overflow-x-hidden
+            .spa-content.p-5
               -block spa-style  
               -block extra-style
               -block extra-script
