--- a/templates/contacts/contact_list.haml
+++ b/templates/contacts/contact_list.haml
@@ -70,6 +70,9 @@
     temba-icon.sorting.show {
       opacity: 1;
     }
+    .spa-container, .spa-content {
+      overflow-x: clip !important;
+    }
 
 -block content
   .flex
