--- a/templates/tickets/ticket_list.haml
+++ b/templates/tickets/ticket_list.haml
@@ -10,39 +10,12 @@
   {{block.super}}
   :css
 
-    .page-content {
-      margin: 0;
-      padding: 0;
-    }
-
-    .page-content > div {
-      padding: 0;
-    }
-
-    .page-content > div > .mt-6 {
-      margin: 0;
-    }
-
-    .page-content .ticket-list {
-      background: transparent;
-      border: none;
-      margin-top: 0;
-      margin-right: 1em;
-      flex-basis: 20%;
-      padding-bottom: 0;
-    }
-
-    .page-content .page {
-      overflow: hidden;
-    }
-
-    .page-content temba-tabs {
-      margin-bottom: 0;
-    }
-
-    .page-content .ticket-ui {
-      margin-bottom: -60px !important;
-      padding-bottom: 60px !important;
+    .ticket-ui {
+      position:relative;
+      margin:0;
+      padding:0;
+      height:100%;
+      flex-grow: 1;
     }
 
 
@@ -76,11 +49,8 @@
     }
 
     .ticket-list {
-      max-width: 460px;
-      flex-basis: 40%; 
-      flex-grow: 0; 
-      flex-shrink: 0;
-      transition: all 200ms ease-in;
+      height: 100%;
+      width: 100%;
     }
 
     temba-menu {
@@ -91,6 +61,26 @@
       --header-bg: rgb(255,249,194);
       --header-text: #555;
       --textarea-height: 5em;
+    }
+
+    .chat-pane {
+      flex-shrink: 9999;
+    }
+
+    .spa-content {
+      padding: 0;
+    }
+
+    #folder-title {
+      font-size: 1.5rem;
+      overflow: hidden;
+      max-height: 2rem;
+      line-height: 2rem;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 1;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      margin: auto;
     }
 
     @container (max-width: 540px) {
@@ -132,7 +122,10 @@
       .menu-flex {
         flex-direction: row-reverse;
       }
+
     }
+
+   
 
 -block extra-script
   {{ block.super }}
@@ -166,6 +159,10 @@
       focusNext = null;
       if (folder !== menuItem.id) {
         document.title = menuItem.name;
+
+        const title = document.querySelector("#folder-title");
+        title.innerHTML = menuItem.name;
+
         // whenever our menu changes, reset filter
         if (statusSelect) {
           statusSelect.setValue("open");
@@ -191,7 +188,7 @@
         chat.refresh();
   
         // refresh our content menu too
-        var contentMenu = document.querySelector("temba-content-menu");
+        var contentMenu = document.querySelector("#default-content-menu");
         contentMenu.refresh();
       }, 2000);
 
@@ -210,6 +207,8 @@
         }
 
         tickets.setEndpoint(ticketsEndpoint, focusNext);
+        const topicMenu = document.querySelector("#topic-content-menu");
+        topicMenu.endpoint = ticketsEndpoint;
 
         // clear our ticket filter note if we have one
         tickets.innerHTML = '';
@@ -296,7 +295,7 @@
       var tab = document.querySelector("temba-tabs").index;
       show += "?tab=" + tab;
 
-      var contentMenu = document.querySelector("temba-content-menu");
+      var contentMenu = document.querySelector("#default-content-menu");
       contentMenu.endpoint = show;
 
       window.history.replaceState({ url: show, show: show } ,"", show);
@@ -425,16 +424,41 @@
       window.history.replaceState({ url:url, show: url }, "", "?tab=" + tab);
     }
 
+    function handleTicketListResized(event) {
+      const store = document.querySelector('temba-store');
+      store.set('ticket-list-width', event.detail.width);
+    }
+
+    function handleTopicUpdated() {
+      const menu = document.querySelector('temba-menu');
+      menu.refresh();
+      reloadContent();
+    }
+
+    onSpload(function() {
+      const store = document.querySelector('temba-store');
+      const width = store.get('ticket-list-width', '300');
+      const resizer = document.querySelector('temba-resizer');
+      resizer.currentWidth = width;
+    });
+    
+
 
 -block spa-title
   #title-text
     {{title}}
 
 -block content
-  .flex.flex-col.overflow-y-hidden.overflow-x-hidden.rounded-b-lg.flex-grow.-m-5.p-5
-    .page.flex-grow.flex.flex-col.min-h-0
-      .flex.ticket-ui(style="position:relative;z-index:0;margin:0;padding:0;height:100%")
-        .ticket-list.flex.flex-col.mr-2
+
+  .page.flex-grow.flex.flex-col.min-h-0
+    .flex.ticket-ui
+      %temba-resizer.flex.flex-row(-temba-resized="handleTicketListResized")
+
+        .ticket-list.flex.flex-col.p-5.pr-0
+          .flex.mb-2
+              #folder-title.flex-grow.relative
+                {{title}}
+            %temba-content-menu#topic-content-menu.relative(endpoint="{% url 'tickets.ticket_folder' folder status uuid %}" -temba-selection="handleContentMenuSelected(event)")
           %temba-select.mb-2(name="ticket-status" onchange="handleStatusFilterChanged(event)" value="{{status}}")
             %temba-option(name="Open" value="open" icon="tickets_open")
             %temba-option(name="Closed" value="closed" icon="tickets_closed")
@@ -448,58 +472,58 @@
             -else
               %temba-ticket-list.flex-grow(nextselection="{{nextUUID}}" agent="{{request.user.email}}" endpoint="{% url 'tickets.ticket_folder' folder status %}" -temba-refreshed="handleTicketsRefreshed" onchange="handleContactChanged(event)")
 
-        .chat-pane.flex-grow.flex-col.flex.ml-4
-          .empty
-            -if has_tickets
-              %h2
-                .popper
-                  🎉
+      .chat-pane.flex-grow.flex-col.flex.ml-4.p-5.pl-0
+        .empty
+          -if has_tickets
+            %h2
+              .popper
+                🎉
 
-                -blocktrans trimmed
-                  All done!
-              .mt-4
-                -blocktrans trimmed
-                  Nice work, there aren't any more tickets here that need your attention.
+              -blocktrans trimmed
+                All done!
+            .mt-4
+              -blocktrans trimmed
+                Nice work, there aren't any more tickets here that need your attention.
 
-            -else
-              %h2
-                -blocktrans trimmed
-                  Tickets
+          -else
+            %h2
+              -blocktrans trimmed
+                Tickets
 
-              .mt-6
-                -blocktrans with name=brand.name trimmed
-                  {{name}} Tickets makes it easy to chat directly with your contacts.
+            .mt-6
+              -blocktrans with name=brand.name trimmed
+                {{name}} Tickets makes it easy to chat directly with your contacts.
 
-              .mt-4
-                -blocktrans trimmed
-                  Sometimes an automated chatbot isn't enough. When your contacts need to chat with a real person, you can use the
-                  Open Ticket action to open a new ticket.
+            .mt-4
+              -blocktrans trimmed
+                Sometimes an automated chatbot isn't enough. When your contacts need to chat with a real person, you can use the
+                Open Ticket action to open a new ticket.
 
 
-          .flex.flex-col.menu-flex
-            .flex
-              %temba-contact-name-fetch.text-2xl.mb-4(-temba-refreshed="handleContactRefreshed" onclick="handleNameClicked()" class="{%if org_perms.contacts.contact_read%}clickable{%endif%}")
-              .flex-grow
-              -include "spa_page_menu.haml"
-            
-            %temba-contact-tickets.mb-1(agent="{{request.user.email}}" -temba-refreshed="handleTicketUpdated" expandable="true")
+        .flex.flex-col.menu-flex
+          .flex
+            %temba-contact-name-fetch.text-2xl.mb-4(-temba-refreshed="handleContactRefreshed" onclick="handleNameClicked()" class="{%if org_perms.contacts.contact_read%}clickable{%endif%}")
+            .flex-grow
+            -include "spa_page_menu.haml"
+          
+          %temba-contact-tickets.mb-1(agent="{{request.user.email}}" -temba-refreshed="handleTicketUpdated" expandable="true")
 
-          %temba-tabs.flex-grow(-temba-context-changed="handleTabChanged" index="{{request.GET.tab}}" collapses="true")
-            %temba-tab(icon="message" name='{{_("Chat")|escapejs}}')
-              .flex.flex-grow.flex-col.overflow-y-auto(style="border-top-right-radius: var(--curvature);")
-                %temba-contact-chat(agent="{{request.user.email}}" monitor="true" -temba-message-sent="handleMessageSent")
+        %temba-tabs.flex-grow(-temba-context-changed="handleTabChanged" index="{{request.GET.tab}}" collapses="true")
+          %temba-tab(icon="message" name='{{_("Chat")|escapejs}}')
+            .flex.flex-grow.flex-col.overflow-y-auto(style="border-top-right-radius: var(--curvature);")
+              %temba-contact-chat(agent="{{request.user.email}}" monitor="true" -temba-message-sent="handleMessageSent")
 
-            %temba-tab(icon="fields" name='{{_("Fields")|escapejs}}')
-              .flex.flex-grow.flex-col.p-4.overflow-y-auto(style="border-top-right-radius: var(--curvature);")
+          %temba-tab(icon="fields" name='{{_("Fields")|escapejs}}')
+            .flex.flex-grow.flex-col.p-4.overflow-y-auto(style="border-top-right-radius: var(--curvature);")
 
-                <temba-contact-fields class="featured-fields pb-1" timezone="{{object.org.timezone}}" featured="true" -temba-button-clicked="handleFieldSearch" {%if not org_perms.contacts.contact_update%}disabled{%endif%}></temba-contact-fields>
-                <temba-contact-fields class="all-fields" timezone="{{object.org.timezone}}" -temba-button-clicked="handleFieldSearch" {%if not org_perms.contacts.contact_update%}disabled{%endif%}>
-                  .no-fields.p-16.text-center(slot="empty")
-                    .text-xl.mb-4
-                      -trans "No Fields"        
-                </temba-contact-fields>
-            
-        
+              <temba-contact-fields class="featured-fields pb-1" timezone="{{object.org.timezone}}" featured="true" -temba-button-clicked="handleFieldSearch" {%if not org_perms.contacts.contact_update%}disabled{%endif%}></temba-contact-fields>
+              <temba-contact-fields class="all-fields" timezone="{{object.org.timezone}}" -temba-button-clicked="handleFieldSearch" {%if not org_perms.contacts.contact_update%}disabled{%endif%}>
+                .no-fields.p-16.text-center(slot="empty")
+                  .text-xl.mb-4
+                    -trans "No Fields"        
+              </temba-contact-fields>
+          
+      
 
 
 
