--- a/templates/msgs/broadcast_scheduled.haml
+++ b/templates/msgs/broadcast_scheduled.haml
@@ -19,15 +19,13 @@
                 -include "includes/recipients.haml" with groups=object.groups.all contacts=object.contacts.all
 
               %td.w-full
-                .flex.flex-wrap.flex-end.items-center.justify-end
-                  .flex-grow.inline
-                    .value-text.field_text
-                      {{ translation.text }}
-                -if translation.attachments
-                  .value-attachments{ style:"margin-top: 5px" }
-                    -for attachment in translation.attachments
-                      {% attachment_button attachment %}
-
+                .flex-grow.inline.flex-wrap.flex-end.items-center.justify-end
+                  .value-text.field_text
+                    {{ translation.text }}
+                    -if translation.attachments
+                      -for attachment in translation.attachments
+                        .ml-2.inline-block
+                          {% attachment_button attachment %}
               %td.value-next
                 .whitespace-nowrap.pr-2.pointer-events-none
                   -if object.schedule.next_fire
