--- a/templates/msgs/broadcast_scheduled_read.haml
+++ b/templates/msgs/broadcast_scheduled_read.haml
@@ -4,10 +4,11 @@
 -block title
   {{ title }}
 
+
 -block content
   -include "formax.haml"
 
-  -if object_list
+  -if send_history
     
     .shadow-lg.bg-white.rounded-t-lg.px-4.py-3.border-b.bg-gray-100
       -trans "Send History"
@@ -20,25 +21,25 @@
               %tr
                 %td
                   -with recipient_count=object.get_message_count
-                    -blocktrans trimmed count counter=recipient_count with count_comma=recipient_count|intcomma
-                      {{ count_comma }} recipient
-                    -plural
-                      {{ count_comma }} recipients
+                    %nobr
+                      -blocktrans trimmed count counter=recipient_count with count_comma=recipient_count|intcomma
+                        {{ count_comma }} recipient
+                      -plural
+                        {{ count_comma }} recipients
                       
                 %td.w-full
-                  .flex.flex-wrap.flex-end.items-center.justify-end
-                    .flex-grow.inline
-                      .value-text.field_text
-                        {{ translation.text }}
-                  -if translation.attachments
-                    .value-attachments{ style:"margin-top: 5px" }
-                      -for attachment in translation.attachments
-                        {% attachment_button attachment %}
+                  .flex-grow.inline.flex-wrap.flex-end.items-center.justify-end
+                    .value-text.field_text
+                      {{ translation.text }}
+                      -if translation.attachments
+                        -for attachment in translation.attachments
+                          .ml-2.inline-block
+                            {% attachment_button attachment %}
 
                 %td
                   .text-right
                     %nobr
-                      {% short_datetime object.created_on %}
+                      {{object.created_on|duration}}
 
 
     .mx-4
