Add select all on list pages

--- a/static/less/style.less
+++ b/static/less/style.less
@@ -4,6 +4,13 @@
 @import "variables";
 @import "mixins";
 
+.select-all {
+  margin: 2em 0.5em;
+  margin-right: 0.7em;
+  color: rgba(0,0,0,.5);
+}
+
+
 #header .logo {
   color: #fff;
 }
