--- a/templates/campaigns/campaign_list.haml
+++ b/templates/campaigns/campaign_list.haml
@@ -48,7 +48,7 @@
         -for obj in object_list
           %tr.campaign.object-row.select-row(data-object-id="{{ obj.id }}" data-uuid="{{ obj.uuid }}" onclick='handleRowClicked(event)' href="{% url 'campaigns.campaign_read' obj.uuid %}")
             - if org_perms.campaigns.campaign_update
-              %td.campaign.checkbox.object-row-checkbox
+              %td.campaign.checkbox.object-row-checkbox(onclick="checkInner(event);")
                 %temba-checkbox{onclick:"handleRowSelection(this)"}
             %td.w-full
               {{obj.name}}
