Fix calls to printPrint() that aren't sploaded and fix channel log read menu path

--- a/templates/airtime/airtimetransfer_read.haml
+++ b/templates/airtime/airtimetransfer_read.haml
@@ -23,7 +23,9 @@
 -block extra-script
   {{ block.super }}
   :javascript
-    prettyPrint();
+    onSpload(function () {
+      prettyPrint();
+    });
 
 -block extra-style
   {{ block.super }}
