--- a/templates/channels/channel_configuration.haml
+++ b/templates/channels/channel_configuration.haml
@@ -41,4 +41,6 @@
 -block extra-script
   {{ block.super }}
   :javascript
-    prettyPrint();
+    onSpload(function () {
+      prettyPrint();
+    });
