Fix channel log read title

--- a/templates/channels/channellog_read.haml
+++ b/templates/channels/channellog_read.haml
@@ -1,8 +1,8 @@
 -extends "smartmin/read.html"
 -load i18n compress
 
--block page-title
-  -trans "Channel Event"
+-block spa-title
+  -trans "Channel Log"
 
 -block title
   -trans "Channel Log"
