--- a/templates/api/v2/api_root.html
+++ b/templates/api/v2/api_root.html
@@ -1,34 +1,29 @@
 {% extends "no_nav.html" %}
-
-{% load rest_framework static %}
-{% load smartmin %}
+{% load rest_framework static smartmin %}
 
 {% block page-top %}
-{% endblock %}
-
+{% endblock page-top %}
 {% block extra-style %}
-    {{ block.super }}
-    <link rel="stylesheet" type="text/css" href='{% static "rest_framework/css/prettify.css" %}'/>
-    <link rel="stylesheet" type="text/css" href='{% static "codemirror/lib/codemirror.css" %}'/>
-
- <style>
-
+  {{ block.super }}
+  <link rel="stylesheet" type="text/css" href='{% static "rest_framework/css/prettify.css" %}' />
+  <link rel="stylesheet" type="text/css" href='{% static "codemirror/lib/codemirror.css" %}' />
+  <style>
     .content-card {
       width: 80%;
     }
 
     .content-main li {
-        margin: 0.4em 0em;
+      margin: 0.4em 0em;
     }
 
     .content-main ul {
-        margin-top: 1em;
-        margin-bottom: 1em;
+      margin-top: 1em;
+      margin-bottom: 1em;
     }
 
     code {
-        padding:0.2em 0.5em;
-        font-size: 0.9em;
+      padding: 0.2em 0.5em;
+      font-size: 0.9em;
     }
 
     .card {
@@ -37,43 +32,44 @@
     }
 
     .page-content {
-         max-width: 100%;
+      max-width: 100%;
     }
 
     .button-form {
-        float: right;
+      float: right;
     }
- 
+
     #get-form {
-        margin-left: 5px;
+      margin-left: 5px;
     }
- 
+
     .form-horizontal .form-actions {
-        margin-top: 0px;
-        margin-bottom: 0px;
-        padding-top: 0px;
-        padding-bottom: 0px;
+      margin-top: 0px;
+      margin-bottom: 0px;
+      padding-top: 0px;
+      padding-bottom: 0px;
     }
- 
+
     .nav.nav-tabs {
-        margin-bottom: 0px;
+      margin-bottom: 0px;
     }
- 
+
     pre {
-        line-height: 18px;
-        font-size:  12px;
-        font-family: monospace;
+      line-height: 18px;
+      font-size: 12px;
+      font-family: monospace;
     }
- 
+
     .CodeMirror {
-        background: #fff;
-        border: 1px solid #eee;
-        margin-bottom: 10px;
-        height: 200px;
+      background: #fff;
+      border: 1px solid #eee;
+      margin-bottom: 10px;
+      height: 200px;
     }
- 
-    .str, .atv {
-        color: teal;
+
+    .str,
+    .atv {
+      color: teal;
     }
 
     h1,
@@ -87,86 +83,97 @@
       margin-top: 2rem;
       margin-bottom: 0.75rem;
     }
+
     h1 {
       font-size: 24px;
       line-height: 40px;
     }
+
     h2 {
       font-size: 42px;
     }
+
     h3 {
       font-size: 26px;
     }
+
     h5 {
       margin-bottom: 5px;
     }
 
-    ul, ol {
-       padding: 0;
-       margin: 0 0 10px 25px;
+    ul,
+    ol {
+      padding: 0;
+      margin: 0 0 10px 25px;
     }
 
 
     strong {
-       font-weight: bold;
+      font-weight: bold;
     }
 
     .breadcrumb {
-        display: flex;
-        flex-wrap: wrap;
+      display: flex;
+      flex-wrap: wrap;
     }
 
     .token {
-        white-space: nowrap;
+      white-space: nowrap;
     }
-
-
- </style>
-{% endblock %}
-
+  </style>
+{% endblock extra-style %}
 {% block content %}
-    {% block breadcrumbs %}
+  {% block breadcrumbs %}
     <div class="breadcrumb">
-        <div class="ml-1">
-            <a href="/">{{brand.name}}</a>
-            <span class="divider">&rsaquo;</span>
+      <div class="ml-1">
+        <a href="/">{{ brand.name }}</a>
+        <span class="divider">&rsaquo;</span>
+      </div>
+      {% for breadcrumb_name, breadcrumb_url in breadcrumblist %}
+        <div class="mx-1">
+          <a href="{{ breadcrumb_url }}" {% if forloop.last %}class="active"{% endif %}>
+            {% if forloop.first %}
+              API v2
+            {% else %}
+              {{ breadcrumb_name }}
+            {% endif %}
+          </a>
+          {% if not forloop.last %}<span class="divider">&rsaquo;</span>{% endif %}
         </div>
-
-        {% for breadcrumb_name, breadcrumb_url in breadcrumblist %}
-            <div class="mx-1">
-                <a href="{{ breadcrumb_url }}" {% if forloop.last %}class="active"{% endif %}>{% if forloop.first %}API v2{% else %}{{ breadcrumb_name }}{% endif %}</a> {% if not forloop.last %}<span class="divider">&rsaquo;</span>{% endif %}
-            </div>
-        {% endfor %}
-
-        <li class="mr-4" style="flex-grow:1"></li>
-        {% if api_token %}<li class="token" style="color: #666">API Token: {{ api_token }}</li>{% else %}<li class="pull-right">Log in to get your API Token</li>{% endif %}
+      {% endfor %}
+      <li class="mr-4" style="flex-grow:1"></li>
+      {% if api_token %}
+        <li class="token" style="color: #666">API Token: {{ api_token }}</li>
+      {% else %}
+        <li class="pull-right">Log in to get your API Token</li>
+      {% endif %}
     </div>
-    {% endblock %}
-
-    <!-- Content -->
-
-    <div id="content" class="px-8 pb-8">
-
-        <div class="content-main">
-            <div class="flex mb-8">
-                <div class="flex-grow page-title">{% if name == "Root" %}{{ brand.name }} API v2{% else %}{{ name }}{% endif %}</h1></div>
-                <temba-button href='{% url "api.v2.explorer" %}' name="API Explorer"></temba-button>
-            </div>
-
-            {{ description }}
+  {% endblock breadcrumbs %}
+  <!-- Content -->
+  <div id="content" class="px-8 pb-8">
+    <div class="content-main">
+      <div class="flex mb-8">
+        <div class="flex-grow page-title">
+          {% if name == "Root" %}
+            {{ brand.name }} API v2
+          {% else %}
+            {{ name }}
+          {% endif %}
         </div>
-
+        <temba-button href='{% url "api.v2.explorer" %}' name="API Explorer">
+        </temba-button>
+      </div>
+      {{ description }}
     </div>
-{% endblock %}
-
+  </div>
+{% endblock content %}
 {% block extra-script %}
-    {{ block.super }}
-    <script src="{{ STATIC_URL }}rest_framework/js/prettify-min.js"></script>
-
-    <script>
-        $(function(){
-            $("pre").has("code").addClass("prettyprint");
-            prettyPrint();
-        });
-    </script>
-{% endblock %}
+  {{ block.super }}
+  <script src="{{ STATIC_URL }}rest_framework/js/prettify-min.js"></script>
+  <script>
+    $(function() {
+      $("pre").has("code").addClass("prettyprint");
+      prettyPrint();
+    });
+  </script>
+{% endblock extra-script %}
