--- a/templates/smartmin/list.haml
+++ b/templates/smartmin/list.haml
@@ -14,40 +14,39 @@
         - block table-buttons
           - if view.add_button
             %a.btn.btn-primary.pull-right{ href:"./create/" } Add
-  {% block pjax %}
-  #pjax
-    -block pre-table
-    -block paginator
-      .mt-4.shadow.rounded-lg.rounded-bl-none.rounded-br-none.bg-white
-        -include "includes/short_pagination.haml"     
-    -block table
-      %table.list.lined
-        %thead
-          %tr
-            -for field in fields
-              %th{ class:'header-{{field}} {% if view|field_orderable:field %}header {% if field == order %}{% if order_asc %}headerSortUp{% else %}headerSortDown{% endif %}{% endif %}{% endif %}', id:'header-{{field}}' }
-                {% get_label field %}
+  -block pjax
+    #pjax
+      -block pre-table
+      -block paginator
+        .mt-4.shadow.rounded-lg.rounded-bl-none.rounded-br-none.bg-white
+          -include "includes/short_pagination.haml"     
+      -block table
+        %table.list.lined
+          %thead
+            %tr
+              -for field in fields
+                %th{ class:'header-{{field}} {% if view|field_orderable:field %}header {% if field == order %}{% if order_asc %}headerSortUp{% else %}headerSortDown{% endif %}{% endif %}{% endif %}', id:'header-{{field}}' }
+                  {% get_label field %}
 
-          %tbody
-            - for obj in object_list
-              %tr{ class:'{% cycle "row2" "row1" %} {% if not obj.is_active and obj|is_smartobject %}inactive{% endif %}'}
-                -for field in fields
-                  %td{ class:'value-{{field}} {% get_class field obj %}{% if field in link_fields %} clickable{% endif %}'}
-                    - if field in link_fields
-                      <div class="linked" onclick="goto(event, this)" {% if pjax %}data-pjax='{{ pjax }}'{% endif %} href="{% get_field_link field obj %}">{% get_value obj field %}</div>
-                    - else
-                      {% get_value obj field %}
+            %tbody
+              - for obj in object_list
+                %tr{ class:'{% cycle "row2" "row1" %} {% if not obj.is_active and obj|is_smartobject %}inactive{% endif %}'}
+                  -for field in fields
+                    %td{ class:'value-{{field}} {% get_class field obj %}{% if field in link_fields %} clickable{% endif %}'}
+                      - if field in link_fields
+                        <div class="linked" onclick="goto(event, this)" {% if pjax %}data-pjax='{{ pjax }}'{% endif %} href="{% get_field_link field obj %}">{% get_value obj field %}</div>
+                      - else
+                        {% get_value obj field %}
 
-            -empty
-              %tr.empty_list
-                -for field in fields
-                  %td
+              -empty
+                %tr.empty_list
+                  -for field in fields
+                    %td
 
-    -block extra-rows
+      -block extra-rows
 
   -block post-table
 
-{% endblock content %}
 
 {% block extra-script %}
 {{ block.super }}
