--- a/templates/orgs/orgimport_create.haml
+++ b/templates/orgs/orgimport_create.haml
@@ -12,7 +12,7 @@
 
   -block import-status
     .flex.w-full.mb-4.items-end.flex-wrap{style:"min-height:41px"}
-      %form#import-form(method="post" action="{% url 'orgs.org_import' %}" enctype="multipart/form-data")
+      %form#import-form(method="post" action="{% url 'orgs.orgimport_create' %}" enctype="multipart/form-data")
         - if form.non_field_errors
           .text-error
             {{ form.non_field_errors }}
@@ -26,7 +26,7 @@
           .mt-4.mb-4.text-error
             {{ form.import_file.errors }}
           #file-upload
-            %input{type:"file", name:"import_file", id:"import_file", onchange:'updateFlowImportFile()'}
+            %input{type:"file", name:"file", id:"file", onchange:'updateFlowImportFile()'}
           #real_button.flex
             %input{type:"text", id:"file-field"}
             .block.button-primary.ml-4(style="margin-top:-1px")
@@ -77,7 +77,7 @@
     border-radius: 5px;
   }
 
-  #import_file {
+  #file {
     position:absolute;
     width:450px;
     height:35px;
@@ -96,7 +96,7 @@
   {{block.super}}
   :javascript
     function updateFlowImportFile(){
-      var file = $("#import_file").val();
+      var file = $("#file").val();
       while (file.indexOf("\\") >= 0){
 	    file = file.substring(file.indexOf("\\")+1, file.length);
       }
