Fix misc template issues

--- a/templates/api/v2/api_explorer.haml
+++ b/templates/api/v2/api_explorer.haml
@@ -11,7 +11,7 @@
         <a href="/">{{ brand.name }}</a>
         %span.divider
           &rsaquo;
-        <a href="{% url 'api.v2' %}")>API v2</a>
+        <a href="{% url 'api.v2' %}">API v2</a>
         %span.divider
           &rsaquo;
 
