--- a/templates/includes/recipients_contact.haml
+++ b/templates/includes/recipients_contact.haml
@@ -1,10 +1,10 @@
 -load contacts i18n
 
 -if contact.is_active
-  %a(href="{% url 'contacts.contact_read' contact.uuid %}" onclick="goto(event, this)")
-    %temba-label.mx-1.my-1(icon="contact" clickable)
+  %a(href="{% url 'contacts.contact_read' contact.uuid %}" onclick="goto(event, this)")<
+    %temba-label.mr-1.mb-1(icon="contact" clickable)
       {{ contact|name_or_urn:user_org }}  
 -else
-  %temba-label.mx-1.my-1(icon="contact" clickable)
+  %temba-label.mr-1.mb-1(icon="contact" clickable)
     .line-through
       -trans "Deleted"
