--- a/templates/includes/recipients_group.haml
+++ b/templates/includes/recipients_group.haml
@@ -1,8 +1,8 @@
 -if group.is_active
-  %a(href="{% url 'contacts.contact_filter' group.uuid %}" onclick="goto(event, this)")
-    %temba-label.mx-1.my-1(icon="group" clickable)
+  %a(href="{% url 'contacts.contact_filter' group.uuid %}" onclick="goto(event, this)")<
+    %temba-label.mr-1.mb-1(icon="group" clickable)
       {{group.name}}
 -else
-  %temba-label.mx-1.my-1(icon="group" clickable)
+  %temba-label.mr-1.mb-1(icon="group" clickable)
     .line-through
       {{ group.name }}
